--- a/css/_typography.scss
+++ b/css/_typography.scss
@@ -4,8 +4,10 @@ html {
 
 body {
 	font-family: sans-serif;
-	font-size: 100%;
+	font-size: 1em;
 	font-weight: 300;
+	line-height: 1.8;
+	color: $text;
 }
 
 h1,
@@ -17,86 +19,142 @@ h6 {
 	font-family: $fontheader;
 	font-weight: 700;
 	color: $headertext;
-	margin: 0 0 0.5em 0;
-	line-height: 1.125;
+	margin: 0 0 0.5em;
+	line-height: 1.25;
+
+	> a {
+		color: $headertext;
+	}
 }
 
 h1 {
-	font-size: 1.5em;
+	margin: 0 0 0.25em;
+	font-size: 2em;
 }
 h2 {
-	font-size: 1.35em;
+	font-size: 1.75em;
 }
 h3 {
-	font-size: 1.25em;
+	font-size: 1.5em;
 }
 h4 {
-	font-size: 1.125em;
+	font-size: 1.25em;
 }
 h5 {
-	font-size: 1em;
+	font-size: 1.125em;
 }
 h6 {
 	font-size: 1em;
 }
 
-p, a, button, label, input, textarea, span {
-	font-size: 1em;
-	font-weight: 300;
-	line-height: 1.5;
-	margin: 0;
-}
-
 p {
-	margin: 0 0 1em;
-	color: $text;
-
-	& > p {
-		margin: 0;
-	}
+	margin: 0 0 1.25em;
+	// line-height: 1.8;
 }
 
 a {
-	// border-bottom: groove 3px $green;
+	border-bottom: solid 0.1em $green;
 	color: $green;
 	text-decoration: none;
-	// transition: color 150ms ease-in-out;
+	line-height: 1.5;
+	transition: color 0.25s, background-color 0.25s;
 
 	&:hover {
-		// color: darken($green, 20%);
-		text-decoration: underline;
+		color: #fff;
+		background-color: $green;
 	}
 }
 
-.continue {
-	color: $green;
+strong, em {
+	font-style: normal;
+	font-family: $fontheader;
+	color: $headertext;
+}
+
+blockquote, .highlight {
+	display: block;
+	margin: 0 0 1em;
+	padding: 0.5em 1em;
+	border-left: solid 0.25em $green;
+	background-color: lighten($grey, 60%);
+	overflow: auto;
+
+	> p {
+		margin: 0;
+		color: darken($text, 20%);
+	}
+}
+
+.highlight {
+	border-color: $purple;
+	line-height: 1.125;
+
+	> code {
+		width: 100%;
+		white-space: pre-wrap;
+		word-wrap: break-word;
+		font-size: 0.75em;
+	}
+
+	.o, .ow, .k, .kc, .kd, .kn, .kp, .kr, .kt {
+		color: $purple;
+	}
+
+	.nf, .l, .ld, .m, .mf, .mh, .mo, .li, .s, .sb, .sc, .sb, .sd, .se, .sh, .si, .sx, .sr, .s1, .ss  {
+		color: $green;
+	}
+
+	.c1 {
+		background-color: $seagreen;
+		color: #fff;
+		font-style: italic;
+	}
 }
 
 pre, code {
+	display: inline;
+	background-color: lighten($grey, 60%);
+	color: $blue;
 	font-family: $mono;
+	font-size: 1em;
 }
 
-@media screen and (min-width: 500px) {
+.continue {
+	display: block;
+	margin: 1em 0 0;
+	color: $green;
+}
+
+@media screen and (min-width: 600px) {
 	html {
 		font-size: 20px;
 	}
 
-	h1 {
-		font-size: 2em;
+	blockquote, .highlight {
+		&.pullleft {
+			display: inline-block;
+			float: left;
+			width: 55%;
+			margin: 0 4% 0.25em 0;
+		}
+
+		&.pullright {
+			display: inline-block;
+			float: right;
+			width: 55%;
+			margin: 0 0 0.25em 4%;
+		}
 	}
-	h2 {
-		font-size: 1.75em;
+
+	.highlight {
+		code {
+			font-size: 0.75em;
+		}
 	}
-	h3 {
-		font-size: 1.5em;
-	}
-	h4 {
-		font-size: 1.25em;
-	}
-	h5 {
-		font-size: 1.125em;
-	}
-	h6 {
-		font-size: 1em;
-	}
+}
+
+@media screen and (min-width: 900px) {
+	// html {
+	// 	font-size: 22px;
+	// }
 }
